force-app/main/default/objects/POC__c/POC__c.object-meta.xml
<CustomObject>
    <label>POC</label>
    <pluralLabel>POCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>POC-{00000}</displayFormat>
    </nameField>
</CustomObject>