force-app/main/default/objects/POC__c/fields/Environment_Type__c.field-meta.xml
<CustomField>
    <fullName>Environment_Type__c</fullName>
    <label>Environment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Customer Cloud</fullName>
                </value>
                <value>
                    <fullName>Fluxora Sandbox</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>