force-app/main/default/objects/POC__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Completed - Failed</fullName>
                </value>
                <value>
                    <fullName>Completed - Success</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>