force-app/main/default/objects/POC__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <label>Success Criteria</label>
    <type>LongTextArea</type>
    <length>2048</length>
</CustomField>